minio/minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-headless
  namespace: minio
  labels:
    app.kubernetes.io/name: minio-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: minio-api
      port: 9000
      targetPort: minio-api
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
  annotations:
    prometheus.io/port: '9000'
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/minio/v2/metrics/cluster'
spec:
  type: ClusterIP
  ports:
    - name: minio-api
      port: 9000
      targetPort: minio-api
  selector:
    app.kubernetes.io/name: minio

---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
spec:
  type: ClusterIP
  ports:
    - name: minio-console
      port: 9001
      targetPort: minio-console
  selector:
    app.kubernetes.io/name: minio
