minio/minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  labels:
    app.kubernetes.io/name: minio
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
    - secretName: minio-console-tls
      hosts:
        - minio-console.dev.local
  rules:
  - host: minio-console.dev.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-console
            port: 
              number: 9001

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minio-ingress
#   labels:
#     app.kubernetes.io/name: minio
#   namespace: minio
# spec:
#   rules:
#   - host: minio.home.local
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: minio-svc
#             port: 
#               number: 9000
